--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jordan Kurtzman",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
