--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "webpack serve --open",
+    "dev-server": "nodemon ./server.js localhost 8080",
+    "dev-client": "webpack-dev-server --port 3000",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +14,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.21.4",
-    "firebase": "^9.5.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "firebase-tools": "^9.23.0",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendinblue-transport": "^1.2.3",
     "normalize.css": "^8.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -29,6 +37,7 @@
     "css-loader": "^6.2.0",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
+    "nodemon": "^2.0.15",
     "npm": "^8.1.3",
     "sass": "^1.39.0",
     "sass-loader": "^12.1.0",
