--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "firebase-tools": "^9.23.0",
     "nodemailer": "^6.7.2",
