--- a/package.json
+++ b/package.json
@@ -4,30 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "nodemon ./server.js localhost 8080",
-    "dev-client": "webpack-dev-server --port 3000",
+    "dev-server": "nodemon ./server.js localhost 5000",
+    "dev-client": "webpack-dev-server --port 127.0.0.1 --open",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "proxy": "http://localhost:5000/",
   "author": "Jordan Kurtzman",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.21.4",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "firebase-tools": "^9.23.0",
+    "formik": "^2.2.9",
     "nodemailer": "^6.7.2",
-    "nodemailer-sendinblue-transport": "^1.2.3",
     "normalize.css": "^8.0.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.3.0",
-    "styled-components": "^5.3.3"
+    "regenerator-runtime": "^0.13.9",
+    "router": "^1.3.6",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
