--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hookform/resolvers": "^2.8.5",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.1",
     "firebase-tools": "^9.23.0",
-    "formik": "^2.2.9",
     "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.22.0",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
