--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.2.0",
+    "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
     "nodemon": "^2.0.15",
