--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.22.0",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "regenerator-runtime": "^0.13.9",
     "router": "^1.3.6",
     "styled-components": "^5.3.3",
