--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.22.0",
+    "react-netlify-forms": "^1.3.2",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
