--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "nodemon": "^2.0.15",
     "npm": "^8.1.3",
     "sass": "^1.39.0",
